--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@openreplyde/web-docker-vite-plugin": "^1.0.0-alpha.2",
+    "@openreplyde/web-docker-vite-plugin": "^1.1.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vitest": "^1.6.0",
     "vue-tsc": "^2.0.6"
   }
 }
